--- a/app/globals.css
+++ b/app/globals.css
@@ -3,15 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    --background: #164e63;
+    --foreground: #ffffff;
 }
 
 body {
@@ -27,5 +20,5 @@ body {
 
 .button-style
 {
-    @apply text-center bg-blue-800 text-gray-100 hover:bg-blue-600 px-2 py-1 rounded-lg
+    @apply text-center bg-blue-800 text-gray-100 hover:bg-blue-600 px-2 py-2 rounded-lg
 }
